# vocable_trainer

./: .gitignore  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/: __init__.py  config.py  logging_config.py  main.py
backend/src/api/: __init__.py  app.py  main.py
backend/src/api/router/: __init__.py  generate_vocables.py  get_vocables.py
backend/src/models/: __init__.py  api_models.py
backend/src/services/: deps.py  llm_service.py  voc_extracter.py
backend/src/services/llm_service/: llm_handler.py  voc_generation.py
backend/src/services/llm_service/utils/: __init__.py  prompt_reader.py  voc_parser.py
backend/src/services/llm_service/utils/prompts/: voc_generation.yaml
backend/test/api/router/: test_generate_vocables.py  test_get_vocables.py
backend/test/services/: test_deps.py
backend/test/services/llm_service/: test_llm_handler.py  test_voc_generation.py
backend/test/services/llm_service/utils/: test_prompt_reader.py  test_voc_parser.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.module.css  page.tsx
frontend/src/app/cards/: page_style.css
frontend/src/app/components/: button.css  button.tsx  card.css  card.tsx  card_translated.css  card_translated.tsx  footer.tsx  input.css  input.tsx  voc_table.css  voc_table.tsx
frontend/src/app/manual/: page.tsx
frontend/src/app/pages/cards/: page.tsx  page_style.css
frontend/src/app/pages/review/: page.tsx  page_style.css
frontend/src/app/pages/stats/: page.tsx
frontend/src/app/review/: page.tsx  page_style.css
frontend/src/app/schemas/: vocables.tsx
frontend/src/app/topic/: page.tsx
llm_service/: Dockerfile  requirement.txt
llm_service/src/: app.py
llm_service/src/models/: api_models.py
