[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Petersdorf",email = "l.petersdorf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pbr (>=7.0.1,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [{include = "src"}]
name = "backend"
version = "0.1.0"
description = "Backend service"
authors = ["Lukas Petersdorf <l.petersdorf@gmail.com>"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^9.0.1"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[flake8]
max-line-length = 79
